# chatbot-arena

./: LICENSE  Ollama_Chatbot_Arena.py  README.adoc  README.md  app.py  foo.py  pyproject.toml  utils.py
pages/: 1_Select_Models.py  2_The_Arena.py  3_The_Leaderboard.py
