[tool.poetry]
name = "chatbot-arena"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.2.0"
openai = "^1.30.1"
streamlit = "^1.34.0"
streamlit-extras = "^0.4.2"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
